# gomoku

./: .babelrc  .gitignore  Cargo.toml  Makefile  README.md  build.sh  package-lock.json  package.json  rules
api/: Cargo.toml
app/: Board.jsx  GameSelection.jsx  Gomoku.jsx  Info.jsx  index.html  index.jsx
src/: config.rs  game_state.rs  main.rs  router.rs  webserver.rs
src/algorithm/: compute.rs  mod.rs
src/algorithm/heuristics/: aligned.rs  global.rs  mod.rs
src/game/: board.rs  capture.rs  free_three.rs  game_state.rs  mod.rs  utils.rs  win.rs
src/game_rules/: aligned.rs  captures.rs  game.rs  mod.rs  moves.rs  rules.rs
src/heuristics/: aligned.rs  global.rs
src/lib/: analyze.rs  create_board.rs  game.rs  mod.rs  move.rs  player.rs  state.rs
src/lib/ia/: algorithm.rs  heuristic.rs  mod.rs
ui/: package.json
ui/src/: Board.jsx  Gomoku.jsx  index.html  index.jsx
