[package]
name = "gomoku"
version = "1.0.0"
authors = ["kyazdani42 <yazdani.kiyan@protonmail.com>, vguillem <vguillem@student.42.fr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
